--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Tutor-Tool of the TUM Faculty for Informatics"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/TUM_Logo_blau.png" />
     <!--
